--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>  
+    <title>Tic Tac Toe</title>
 </head>
-<body>
-    
+
+<body onload="init()">
+
+    <h1>Tic Tac Toe</h1>
+    <div class="center">
+        <div id="content"></div>
+        <div>
+            <button class="button" onclick="restartGame()">Spiel neu Starten!</button>
+        </div>
+    </div>
 
 
     <script src="./script.js"></script>
 </body>
+
 </html>
